setup for validation messages
added setup to store validation messages in one file

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,5 @@
-app.titles= Spring Boot Samplessss 
-app.loginHeader = login header
+# messages.properties (English)
+NotBlank.institution.name=Institution name is required.
+Size.institution.name=Institution name must not exceed 255 characters.
+NotBlank.institution.description=Institution description is required.
+Size.institution.description=Institution description must not exceed 255 characters.
