--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,3 +1,3 @@
-app.title= Spring Boot Sample 
-app.footer = Created with love in Coders Lab
-hello.message= Witam {0}
+# messages.properties (English)
+NotBlank.institution.name=Institution name is required.
+Size.institution.name=Institution name must not exceed 255 characters.
